...
        //    // TODO: Code below will remove all oauth only auth methods, this behaviour wasn't tested though
        //    // and may produce undefined results in viewcontrollers that do present auth methods if none are available
        //    auths = authenticationDocument.authentication?.map({ (opdsAuth) -> Authentication in
        //      return Authentication.init(auth: opdsAuth)
        //    }).filter { $0.authType != .oauthIntermediary } ?? []

        supportsReservations = authenticationDocument.features?.disabled?.contains("https://librarysimplified.org/rel/policy/reservations") != true
        userProfileUrl = authenticationDocument.links?.first(where: { $0.rel == "http://librarysimplified.org/terms/rel/user-profile" })?.href
        loansUrl = URL.init(string: authenticationDocument.links?.first(where: { $0.rel == "http://opds-spec.org/shelf" })?.href ?? "")
        supportsSimplyESync = userProfileUrl != nil

        // Debug logging for sync support
        Log.debug(#file, """
...
